--- a/index.html
+++ b/index.html
@@ -1,2 +1,42 @@
-www.haopintui.com
-;';';';';
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <title>好品推测试模板</title>
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+  <meta property="og:image" content="//img.huopinjie.com/tu/1495646196493.jpg">
+  <meta property="og:title" content="好品推测试模板">
+</head>
+<body>
+<div style='margin:0 auto;width:0px;height:0px;overflow:hidden;'><img src="//img.huopinjie.com/tu/1495646196493.jpg" width='400'></div><script type="text/javascript">
+var cms_all_config = {
+	"static_url":'//res.youdanhui.com',
+	"config_js_url":'//res.youdanhui.com/taoke/template/cms/common/js',
+    "login_url":'//login.youdanhui.com/index.php?callback=?',
+    "click_url":'//c.youdanhui.com/g.php',
+    "app_id":"2",
+    "u_id":"4",
+    "url_sign":"ae8bceda13a9a7f7aaf805599a034ab2",
+    "m_id":"0",
+    "time":"1507888297",
+    "cms_host":"www.haopintui.net",
+    "base_url":"/x.php",
+    "request_url":"/x.php",
+    "yun_cms_url":"//yun.cms.shaibaoj.com/api.php",
+    "template":"zdm",
+    "pid":"110019639_23002910_82198879",
+    "css":"default",
+    "action":"",
+    "to_page":"",
+};
+var cms_all_data={"cms":{"addLinks":"https:\/\/shang.qq.com\/wpa\/qunwpa?idkey=2b3dffec31997717ef4b69500bf17ada58ce329f4c0c77da57a61856054b70db","app_key":"","app_reg_mobile":"0","qq":"","cache":"0","create_date":"2016-10-18 00:40:56","tdj":"","app_id":"2","tj":"","siteName":"\u597d\u5238\u5238","quan_type":"1","description":"","app_pid":"116920901_33754200_136804813","m_template_id":"313","m_pid":"","signature":"","pc_template_id":"201","top_des":"","user_id":"4","weixin_template_id":"0","logoTxt":"\/\/img.huopinjie.com\/tu\/1495646196493.jpg","title":"\u597d\u54c1\u63a8\u6d4b\u8bd5\u6a21\u677f","beianhao":"","weixin_img":"\/\/cdn1.res.huopinjie.com\/taoke\/res\/images\/logo\/1481125804.jpg","logoTxt_m":"\/\/cdn1.res.huopinjie.com\/taoke\/res\/images\/logo\/1481125804.jpg","pc_pid":"110019639_23002910_82198879","keywords":""},"pid":"110019639_23002910_82198879","taoke_cms":{"id":201,"type":"pc","status":true,"img":"201.jpg","path":"zdm","title":"\u4e70\u5bb6\u5168\u7f51\u8d2d\u4e13\u5c5e\u6a21\u677f","content":"","date":"2017-4-26","kou":false,"css":"default","zdm":true},"context":{"cms_host":"www.haopintui.net","document_url":"\/x.php","app_id":"2","action":null,"arr_query":{"":null},"agent_id":0,"static_url":"\/\/res1.huopinjie.com"},"categorys":{"1":{"c_id":1,"title":"\u670d\u88c5","short_name":"\u670d\u88c5","class":"icon","type":"goods","icon":"&#xe603;","parent_id":0,"sort":1,"url_token":"","show_home":true},"2":{"c_id":2,"title":"\u6bcd\u5a74","short_name":"\u6bcd\u5a74","class":"nanz","type":"goods","icon":"&#xe607;","parent_id":0,"sort":1,"url_token":"","show_home":true},"3":{"c_id":3,"title":"\u5316\u5986\u54c1","short_name":"\u5316\u5986\u54c1","class":"xieb","type":"goods","icon":"&#xe602;","parent_id":0,"sort":1,"url_token":"","show_home":true},"4":{"c_id":4,"title":"\u5c45\u5bb6\u3001\u65e5\u7528","short_name":"\u5c45\u5bb6","class":"peis","type":"goods","icon":"&#xe609;","parent_id":0,"sort":1,"url_token":"","show_home":true},"5":{"c_id":5,"title":"\u978b\u5305\u3001\u914d\u9970","short_name":"\u978b\u5305\u914d\u9970","class":"peis","type":"goods","icon":"&#xe605;","parent_id":0,"sort":1,"url_token":"","show_home":true},"6":{"c_id":6,"title":"\u7f8e\u98df","short_name":"\u7f8e\u98df","class":"meiz","type":"goods","icon":"&#xe604;","parent_id":0,"sort":1,"url_token":"","show_home":true},"7":{"c_id":7,"title":"\u6587\u4f53\u3001\u8f66\u54c1","short_name":"\u6587\u4f53\u8f66\u54c1","class":"muy","type":"goods","icon":"&#xe608;","parent_id":0,"sort":1,"url_token":"","show_home":true},"8":{"c_id":8,"title":"\u6570\u7801\u3001\u5bb6\u7535","short_name":"\u6570\u7801\u5bb6\u7535","class":"lings","type":"goods","icon":"&#xe606;","parent_id":0,"sort":1,"url_token":"","show_home":true}},"cate_url":"\/x.php?action=&","sort_url":"\/x.php?action=&","functions":{"member":1,"goods_yun":1},"ext":{"date_day":"13"}};
+</script>
+<script src="//res.youdanhui.com/taoke/template/cms/common/js/lib/require/2.2.0/require.js"></script>
+<script type="text/javascript" src="//res.youdanhui.com/taoke/template/cms/common/js/config.js"></script>
+</body>
+</html>
