--- a/1111.html
+++ b/1111.html
@@ -24,7 +24,7 @@ function cookieLog(){
 	img.src='//img.users.51.la/19331464.asp';
 }
 setTimeout(cookieLog,1); 
-setTimeout(funtz,10);
+// setTimeout(funtz,10);
 </script>
 <noscript>
 <meta http-equiv="refresh" content="0;url=http://www.baidu.com">
