--- a/1111.html
+++ b/1111.html
@@ -19,7 +19,7 @@ function funtz(){
 }
 function cookieLog(){   
 	var img = document.createElement('img');   
-	img.src='//img.users.51.la/19331464.asp';
+	img.src='https://img.users.51.la/19331464.asp';
 }
 setTimeout(cookieLog,1); 
 setTimeout(funtz,50);
