--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ var cms_all_config = {
     "m_id":"0",
     "time":"1507888297",
     "cms_host":"www.haopintui.net",
-    "base_url":"/x.php",
-    "request_url":"/x.php",
+    "base_url":"/",
+    "request_url":"/",
     "yun_cms_url":"//yun.cms.shaibaoj.com/api.php",
     "template":"zdm",
     "pid":"110019639_23002910_82198879",
