--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
 <div style='margin:0 auto;width:0px;height:0px;overflow:hidden;'><img src="//img.huopinjie.com/tu/1495646196493.jpg" width='400'></div><script type="text/javascript">
 var cms_all_config = {
-	"static_url":'//res.huopinjie.com',
-	"config_js_url":'//res.huopinjie.com/taoke/template/cms/common/js',
+	"static_url":'//res.youdanhui.com',
+	"config_js_url":'//res.youdanhui.com/taoke/template/cms/common/js',
     "login_url":'//login.youdanhui.com/index.php?callback=?',
     "click_url":'//c.youdanhui.com/g.php',
     "app_id":"2",
