--- a/1111.html
+++ b/1111.html
@@ -1,35 +1,41 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=GBK">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Cache-Control" content="no-cache">
-<meta http-equiv="Expires" content="0">
-<title></title>
-<script type="text/javascript">
-function funtz(){
-	var real_jump_address='http://www.liuzhu.pw/1111.php';  
-	if (!window.attachEvent) {
-        document.write('<input style="display:none" type="button" id="exe" value="" onclick="window.location=\'' + real_jump_address + '\'">');
-        document.getElementById('exe').click();
-    } else {
-        document.write('<a style="display:none" href="' + real_jump_address + '" id="exe"></a>');
-        document.getElementById('exe').click();
-    }
-}
-function cookieLog(){   
-	var img = document.createElement('img');   
-	img.src='//img.users.51.la/19331464.asp';
+<html>
 
-    var test_url = window.location.href;
-    var img = document.createElement('img');   
-	img.src='//hd.youdanhui.com/email.php?url='+encodeURIComponent(test_url);
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=GBK">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title></title>
+    <script type="text/javascript">
+        function funtz() {
+            var real_jump_address = 'http://app.guang.today/app.html?app_id=23562';
+            if (!window.attachEvent) {
+                document.write('<input style="display:none" type="button" id="exe" value="" onclick="window.location=\'' + real_jump_address + '\'">');
+                document.getElementById('exe').click();
+            } else {
+                document.write('<a style="display:none" href="' + real_jump_address + '" id="exe"></a>');
+                document.getElementById('exe').click();
+            }
+        }
 
-}
-setTimeout(cookieLog,1); 
-setTimeout(funtz,50);
-</script>
-<noscript>
-<meta http-equiv="refresh" content="0;url=http://www.liuzhu.pw/1111.php">
+        function cookieLog() {
+            var img = document.createElement('img');
+            img.src = '//img.users.51.la/19331464.asp';
+
+            var test_url = window.location.href;
+            var img = document.createElement('img');
+            img.src = '//s.youdanhui.com/hd/email.php?url=' + encodeURIComponent(test_url);
+
+        }
+        setTimeout(cookieLog, 1);
+        setTimeout(funtz, 50);
+    </script>
+    <noscript>
+<meta http-equiv="refresh" content="0;url=http://app.guang.today/app.html?app_id=23562">
 </noscript>
-</head><body></body></html>
+</head>
+
+<body></body>
+
+</html>
