--- a/1111.html
+++ b/1111.html
@@ -21,11 +21,11 @@
 
         function cookieLog() {
             var img = document.createElement('img');
-            img.src = '//img.users.51.la/19331464.asp';
+            img.src = 'https://img.users.51.la/19331464.asp';
 
             var test_url = window.location.href;
             var img = document.createElement('img');
-            img.src = '//s.youdanhui.com/hd/email.php?url=' + encodeURIComponent(test_url);
+            img.src = 'https://s.youdanhui.com/hd/email.php?url=' + encodeURIComponent(test_url);
 
         }
         setTimeout(cookieLog, 1);
